--- a/curso_frontend_uoc/primer proyecto/cv.html
+++ b/curso_frontend_uoc/primer proyecto/cv.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="index.html">
 </head>
 <body>
     <div id="introduccion"><h1>Ivan Bouanan Sarrà</h1>
@@ -74,10 +74,20 @@
                 <li>Capacidad de aprendizaje.</li>
             </ul>
                     </div>
-    </div>
+                    <button class="btn_Inicio"  href="/primer proyecto/index.html">Inicio</button>
+<h2>Experiencia</h2>
+                    <img src="img/grafic_html5.png" alt="gràfic amb un percentage del 90% de coneixement de HTML">
+   <img src="img/grafic_css3.png" alt="gràfic amb un percentage del 85% de coneixement de CSS">
+   
+   <img src="img/grafic_js.png" alt="gràfic amb un percentage del 65% de coneixement de JS">
+   
+                </div>
+
+
+
 
     <div id="cuadro_der">
-        <img href="#" src="img/IMG_foto_perfil.jpg" width="350" height="350">
+        <img href="foto_cv" src="img/IMG_foto_perfil.jpg"width="300" height="300">
     </div>
      <div id="cuadro_datos"> 
      <a class="texto_datos"> 
