--- a/curso_frontend_uoc/primer proyecto/index.html
+++ b/curso_frontend_uoc/primer proyecto/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="cv.html">
     
 </head>
 <body>
@@ -17,38 +18,7 @@
 <div id="cuadro_izq" >
     <a class="lado_izq"></a>
         <h2>Formación</h2>
-        <h3>Técnico superior en Automatización y Róbotica industrial </h3>
-        <p>IES Palau Ausit 2021</p>
-        <h3>Automatas programables Siemens S7-300</h3>
-        <p>Institut Numáncia Formació 2017</p>
-        <h3>Automatas Programables PLC Sistema Siemens</h3>
-        <p>EURECAT Centre Tecnológic de Catalunya 2016</p>
         
-        <h2>Experiencia laboral</h2>
-
-        <h3>Programador de PLC 09/2022-Actualidad</h3>        
-        <h4>Antonio Matachana S.A.</h4>
-        <div id="listado1"> 
-<ul>
-    <li>Desarrollo de programas desde cero y modificaciones.</li>
-    <li>Desarrollo de sistemas HMI.</li>
-    <li>Seguimiento del proyecto eléctrico.</li>
-</ul>
-        </div>
-        <h3>Programador de PLC 09/2021-09/2022</h3>
-        <h4>Serra S.A.</h4>
-        <div id="listado2"> 
-<ul>
-    <li>Desarrollo de programas desde cero y modificaciones.</li>
-    <li>Desarrollo de sistemas HMI.</li>
-    <li>Dirección del proyecto eléctrico.</li>
-    <li>Selección de materiales eléctricos y neumaticos para la instalación.</li>
-
-</ul>
-        </div>
-        <h3>Técnico industrial 06/2008-09/2021</h3>
-        <h4>Posimat S.A.</h4>       
-        <div id="listado3"> 
 <ul>
     <li>Montaje de maquinaría en planta, instalación y puesta en marcha.</li>
     <li>Mantenimiento prevenctivo y correctivo en fabrica del cliente.</li>
@@ -66,23 +36,5 @@
 </ul>
         </div>
 
-        <h2>Experiencia laboral</h2>
-        <div id="listado5"> 
-            <ul>
-                <li>Trabajo en equipo.</li>
-                <li>Documentacón técnica.</li>
-                <li>Capacidad de aprendizaje.</li>
-            </ul>
-                    </div>
-    </div>
-
-    <div id="cuadro_der">
-        <img href="#" src="img/IMG_foto_perfil.jpg" width="350" height="350">
-        <h2>Contacto</h2>
-
-
-
-
-    </div>
 </body>
 </html>
