--- a/curso_frontend_uoc/primer proyecto/index.html
+++ b/curso_frontend_uoc/primer proyecto/index.html
@@ -14,27 +14,11 @@
     <p>Tengo más de 14 años de experiencia en el sector de la maquinaria
         industrial, y formación en automatización de sistemas.
  </p>
-        </div>
-<div id="cuadro_izq" >
-    <a class="lado_izq"></a>
-        <h2>Formación</h2>
-        
-<ul>
-    <li>Montaje de maquinaría en planta, instalación y puesta en marcha.</li>
-    <li>Mantenimiento prevenctivo y correctivo en fabrica del cliente.</li>
-    <li>Instalación de sistemas eléctricos y configuración de sistemas de visión artificial OMRON.</li>
-    <li>Selección de materiales eléctricos y neumaticos para la instalación.</li>
+ <div id="btn_cv">
+ <a href="/primer proyecto/cv.html" class="pag_cv">CV</a>
+</div>
+</div>
 
-</ul>
-        </div>
-
-        <h3>Maquinista de obras públicas 01/2006-05/2008</h3>
-        <h4>Excasans S.L.</h4>       
-        <div id="listado4"> 
-<ul>
-    <li>Conducción de retroexcavadora.</li>
-</ul>
-        </div>
 
 </body>
 </html>
