--- a/curso_frontend_uoc/primer proyecto/index.html
+++ b/curso_frontend_uoc/primer proyecto/index.html
@@ -13,9 +13,9 @@
     <div id="introduccion_contacto">
     
  <div id="btn_cv">
-    <a href="/primer proyecto/index.html"  class="pag_contacto">Contacto</a> 
-    <a href="/primer proyecto/Aficiones.html" class="pag_aficiones">Aficiones</a>
-    <a href="/primer proyecto/cv.html" class="pag_cv">CV</a>
+    <a href="/index.html"  class="pag_contacto">Contacto</a> 
+    <a href="/Aficiones.html" class="pag_aficiones">Aficiones</a>
+    <a href="/cv.html" class="pag_cv">CV</a>
 </div>
 </div>
 
