--- a/curso_frontend_uoc/primer proyecto/Aficiones.html
+++ b/curso_frontend_uoc/primer proyecto/Aficiones.html
@@ -15,9 +15,9 @@
     <h2>Me encantan los deportes, sobretodo los acuaticos.</h2>
  
  <div id="btn_cv">
-    <a href="/primer proyecto/index.html"  class="pag_contacto">Contacto</a> 
-    <a href="/primer proyecto/Aficiones.html" class="pag_aficiones">Aficiones</a>
-    <a href="/primer proyecto/cv.html" class="pag_cv">CV</a>
+    <a href="/index.html"  class="pag_contacto">Contacto</a> 
+    <a href="/Aficiones.html" class="pag_aficiones">Aficiones</a>
+    <a href="/cv.html" class="pag_cv">CV</a>
 </div>
 </div>
 <div id="cuadro_playa">
