--- a/curso_frontend_uoc/primer proyecto/cv.html
+++ b/curso_frontend_uoc/primer proyecto/cv.html
@@ -26,7 +26,8 @@
     </div>
     <div id="contenedor">
         <div id="cuadro_izq">
-        <h2>Formación</h2>
+        <div id="tabulado_cuadro_izq">
+            <h2>Formación</h2>
         <h3>Técnico superior en Automatización y Róbotica industrial</h3>
         <p>IES Palau Ausit 2021</p>
         <h3>Automatas programables Siemens S7-300</h3>
@@ -92,6 +93,7 @@
             <li>Documentacón técnica.</li>
             <li>Capacidad de aprendizaje.</li>
             </ul>
+        </div>
             <br />
 
             <br />
